--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,15 @@ body {
   width: 100%;
   height: 100%;
 }
-html,
-body {
+#content {
   width: 100%;
-  height: 5000px;
+  height: max-content;
   background: linear-gradient(180deg, #ffc0ce 0%, #6de2fe 100%);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: contain;
+  /* height: 5000px;
+  background: linear-gradient(180deg, #ffc0ce 0%, #6de2fe 100%);*/
 }
 .font-script {
   font-family: "Imperial Script" !important;
@@ -30,21 +31,39 @@ h1.font-script {
   object-fit: cover;
   overflow: hidden;
 }
+.img-h-300 {
+  width: 50%;
+  max-height: 500px;
+  min-height: 500px;
+}
+.img-h-300 img {
+  width: 100% !important;
+  max-height: 500px;
+  min-height: 500px;
+  object-fit: cover;
+  overflow: hidden;
+}
+.justify-around {
+  justify-content: space-around;
+}
 .button-pink {
   background-color: #f7c9cc;
   padding: 0.75rem 1.5rem;
 }
-#alternating > .flex {
+.alternating > .flex {
   gap: 4rem;
 }
-#alternating > .flex:nth-child(even) {
+.alternating > .flex:nth-child(even) {
   flex-direction: row-reverse;
 }
+.w-1\/2 {
+  width: 50%;
+}
 @media screen(max-width: 768px) {
-  #alternating > .flex:nth-child(even) {
+  .alternating > .flex:nth-child(even) {
     flex-direction: column-reverse;
   }
-  #alternating > .flex:nth-child(odd) {
+  .alternating > .flex:nth-child(odd) {
     flex-direction: column;
   }
 }
